--- a/Writeup/Warmup/Writeup/Warmup.tex
+++ b/Writeup/Warmup/Writeup/Warmup.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \title{\textbf{Structural Econometrics with Implementations in Julia}}
-\author{Jorge Luis Garc\'{i}a\thanks{Department of Economics, the University of Chicago (jorgelgarcia@uchicago.edu).} $^{,}$\thanks{A rough version of this document with an implementation in Python was delivered as an assignment when we were TAs for Econ 350 at the University of Chicago. We developed it together with Yike Wang, who we thank for many useful comments.} \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ Bradley J. Setzler\thanks{Department of Economics, the University of Chicago (bradley.setzler@gmail.com).}}
+\author{Jorge Luis Garc\'{i}a\thanks{Department of Economics, the University of Chicago (jorgelgarcia@uchicago.edu).} $^{,}$\thanks{A rough version of this document with an implementation in Python was delivered as an assignment when we were TAs for Econ 350 at the University of Chicago. We developed it together with Yike Wang, who we thank for many useful comments.}}
 \date{First Draft: June 1, 2014 \\ This Draft: \today}
 \maketitle
 
