--- a/Writeup/Handout/Solution/DDSE_Solution.tex
+++ b/Writeup/Handout/Solution/DDSE_Solution.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \title{\textbf{Structural Econometrics with Implementations in Julia}}
-\author{Jorge Luis Garc\'{i}a\thanks{Department of Economics, the University of Chicago (jorgelgarcia@uchicago.edu).} $^{,}$\thanks{A rough version of this document with an implementation in Python was delivered as an assignment when we were TAs for Econ 350 at the University of Chicago. We developed it together with Yike Wang, who we thank for many useful comments.}}
+\author{Jorge Luis Garc\'{i}a\thanks{Department of Economics, the University of Chicago (jorgelgarcia@uchicago.edu).} $^{,}$\thanks{A rough version of this document with an implementation in Python was delivered as an assignment when I was TA for Econ 350 at the University of Chicago. I developed it together with Yike Wang, who I thank for many useful comments.}}
 \date{First Draft: June 1, 2014 \\ This Draft: \today}
 \maketitle
 
