--- a/Code/Notebooks/Class_1_Warmup_Probit_StaticModel.ipynb
+++ b/Code/Notebooks/Class_1_Warmup_Probit_StaticModel.ipynb
@@ -11,7 +11,7 @@
   },
   "language": "Julia",
   "name": "",
-  "signature": "sha256:327fec8f2df778225297d92305b0ad336b3df0c5ed5f93a317e8e56e63f25b58"
+  "signature": "sha256:3c56ecb81846417e8c9f47060d1682ce63ad647f4e9268d4cdfc137f6876bac4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -46,6 +46,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Import packages\n",
+      "using Distributions\n",
       "# Set a seed\n",
       "srand(1)\n",
       "\n",
@@ -76,6 +78,23 @@
       "for n in [10,50,100,500,10000]\n",
       "        l = trapezoidalint(sin,0,pi,n)\n",
       "        println(l)\n",
+      "end\n",
+      "\n",
+      "# Monte Carlo Integrarion\n",
+      "# function\n",
+      "function mcint(f,a,b,n)\n",
+      "    l = 0\n",
+      "    for k = 1:n\n",
+      "            x = rand(Uniform(a,b))\n",
+      "            l += f(x)\n",
+      "    end\n",
+      "    return l *= (b-a)/n\n",
+      "end\n",
+      "\n",
+      "# approximations\n",
+      "for n in [10,50,100,500,10000]\n",
+      "        l = mcint(sin,0,pi,n)\n",
+      "        println(l)\n",
       "end"
      ],
      "language": "python",
@@ -90,11 +109,16 @@
         "1.9993419830762615\n",
         "1.9998355038874436\n",
         "1.999993420259403\n",
-        "1.9999999835506606\n"
+        "1.9999999835506606\n",
+        "1.919264781105286\n",
+        "2.0276218639370494\n",
+        "2.0753482141242006\n",
+        "1.9383023228517158\n",
+        "1.9810130587148964\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -856,8 +880,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "Warning: imported binding for pi overwritten in module Main\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
